--- a/pytest.ini
+++ b/pytest.ini
@@ -1,10 +1,20 @@
 [pytest]
-
+# Add options for automatic HTML report generation and internal logging
 addopts =
     --html=reports/report.html
     --self-contained-html
-    --capture=no
+    --capture=tee-sys
     -v
+
+# Live CLI Logging (What you see in the terminal while running)
+log_cli = true
+log_cli_level = INFO
+log_cli_format = %(asctime)s [%(levelname)s] %(name)s: %(message)s
+log_cli_date_format = %Y-%m-%d %H:%M:%S
+
+# HTML Report Logging (What gets captured inside the report)
+log_format = %(asctime)s [%(levelname)s] %(name)s: %(message)s
+log_date_format = %Y-%m-%d %H:%M:%S
 
 markers =
     smoke: Smoke tests
