add video link on failure, use built-in timeout

--- a/pytest.ini
+++ b/pytest.ini
@@ -4,6 +4,8 @@ addopts =
     --html=reports/report.html
     --self-contained-html
     --capture=tee-sys
+    --video=retain-on-failure
+    --output=reports/test-results
     -v
 
 # Live CLI Logging (What you see in the terminal while running)
