--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -25,7 +25,8 @@ jobs:
       - name: Run regression tests
         run: |
           docker run --rm \
-            --env-file .env \
+            -e CI_SAUCEDEMO_USER_PASSWORD=${{ secrets.CI_SAUCEDEMO_USER_PASSWORD }} \
+            -e PROD_SAUCEDEMO_USER_PASSWORD=${{ secrets.PROD_SAUCEDEMO_USER_PASSWORD }} \
             -v ${{ github.workspace }}/reports:/app/reports \
             pytest-playwright-automation:latest \
             pytest tests/ \
