--- a/.github/workflows/_test_logic.yml
+++ b/.github/workflows/_test_logic.yml
@@ -1,4 +1,6 @@
 name: 🛠️ Shared Test Logic
+
+
 on:
   workflow_call:
     inputs:
@@ -20,6 +22,12 @@ on:
         required: true
       PROD_SAUCEDEMO_USER_PASSWORD:
         required: true
+
+
+permissions:
+  pages: write
+  id-token: write
+  contents: read
 
 jobs:
   run-tests:
