--- a/.github/workflows/_test_logic.yml
+++ b/.github/workflows/_test_logic.yml
@@ -23,11 +23,11 @@ on:
       PROD_SAUCEDEMO_USER_PASSWORD:
         required: true
 
-
 permissions:
   pages: write
   id-token: write
   contents: read
+
 
 jobs:
   run-tests:
@@ -36,21 +36,23 @@ jobs:
       - uses: actions/checkout@v4
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
+
       - name: Build Docker image with cache
         uses: docker/build-push-action@v6
         with:
           context: .
-          tags: pytest-automation:latest
+          tags: pytest-playwright-automation:latest
           load: true
           cache-from: type=gha
           cache-to: type=gha,mode=max
+
       - name: Execute Pytest
         run: |
           docker run --rm \
             -e CI_SAUCEDEMO_USER_PASSWORD=${{ secrets.CI_SAUCEDEMO_USER_PASSWORD }} \
             -e PROD_SAUCEDEMO_USER_PASSWORD=${{ secrets.PROD_SAUCEDEMO_USER_PASSWORD }} \
             -v ${{ github.workspace }}/reports:/app/reports \
-            pytest-automation:latest \
+            pytest-playwright-automation:latest \
             pytest tests/ --env=${{ inputs.env }} --browser=${{ inputs.browser }} -m ${{ inputs.marker }} -n ${{ inputs.workers }}
       - name: Upload Results
         if: always()
